force-app/main/default/objects/Product2/fields/Account_Management__c.field-meta.xml
<CustomField>
    <fullName>Account_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Management</label>
    <type>Checkbox</type>
</CustomField>