force-app/main/default/objects/Product2/fields/AV__c.field-meta.xml
<CustomField>
    <fullName>AV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AV</label>
    <type>Checkbox</type>
</CustomField>