force-app/main/default/objects/Product2/fields/Bespoke_Totaliser__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_Totaliser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bespoke Totaliser</label>
    <type>Checkbox</type>
</CustomField>