force-app/main/default/objects/Product2/fields/Discount_Per_Live_Item__c.field-meta.xml
<CustomField>
    <fullName>Discount_Per_Live_Item__c</fullName>
    <label>Discount Per Live Item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>