force-app/main/default/objects/Product2/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10003</fullName>
            </value>
            <value>
                <fullName>10104</fullName>
            </value>
            <value>
                <fullName>10304</fullName>
            </value>
            <value>
                <fullName>10306</fullName>
            </value>
            <value>
                <fullName>10307</fullName>
            </value>
            <value>
                <fullName>10308</fullName>
            </value>
            <value>
                <fullName>10309</fullName>
            </value>
            <value>
                <fullName>10401</fullName>
            </value>
            <value>
                <fullName>11001</fullName>
            </value>
            <value>
                <fullName>11002</fullName>
            </value>
            <value>
                <fullName>11003</fullName>
            </value>
            <value>
                <fullName>11004</fullName>
            </value>
            <value>
                <fullName>11010</fullName>
            </value>
            <value>
                <fullName>11011</fullName>
            </value>
            <value>
                <fullName>11012</fullName>
            </value>
            <value>
                <fullName>11013</fullName>
            </value>
            <value>
                <fullName>11014</fullName>
            </value>
            <value>
                <fullName>11015</fullName>
            </value>
            <value>
                <fullName>11016</fullName>
            </value>
            <value>
                <fullName>11017</fullName>
            </value>
            <value>
                <fullName>11020</fullName>
            </value>
            <value>
                <fullName>11021</fullName>
            </value>
            <value>
                <fullName>11022</fullName>
            </value>
            <value>
                <fullName>11023</fullName>
            </value>
            <value>
                <fullName>11024</fullName>
            </value>
            <value>
                <fullName>11025</fullName>
            </value>
            <value>
                <fullName>11026</fullName>
            </value>
            <value>
                <fullName>11027</fullName>
            </value>
            <value>
                <fullName>11028</fullName>
            </value>
            <value>
                <fullName>12001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>