force-app/main/default/objects/Product2/fields/Leaderboard__c.field-meta.xml
<CustomField>
    <fullName>Leaderboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leaderboard</label>
    <type>Checkbox</type>
</CustomField>