force-app/main/default/objects/Product2/fields/Logistical_Costs__c.field-meta.xml
<CustomField>
    <fullName>Logistical_Costs__c</fullName>
    <label>Logistical Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>