force-app/main/default/objects/Product2/fields/Pods__c.field-meta.xml
<CustomField>
    <fullName>Pods__c</fullName>
    <label>Pods</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>