force-app/main/default/objects/Product2/fields/ProductID18__c.field-meta.xml
<CustomField>
    <fullName>ProductID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductID18</label>
    <type>Text</type>
</CustomField>