force-app/main/default/objects/Product2/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>