force-app/main/default/objects/Product2/fields/Silent_Auction_Items__c.field-meta.xml
<CustomField>
    <fullName>Silent_Auction_Items__c</fullName>
    <label>Silent Auction Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>