force-app/main/default/objects/Product2/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>