force-app/main/default/objects/Product2/fields/Tablets__c.field-meta.xml
<CustomField>
    <fullName>Tablets__c</fullName>
    <label>Tablets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>