force-app/main/default/objects/Product2/fields/Tech_License__c.field-meta.xml
<CustomField>
    <fullName>Tech_License__c</fullName>
    <label>Tech License</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>