force-app/main/default/objects/Product2/fields/Ticketing__c.field-meta.xml
<CustomField>
    <fullName>Ticketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticketing</label>
    <type>Checkbox</type>
</CustomField>