force-app/main/default/objects/Product2/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Website</label>
    <type>Checkbox</type>
</CustomField>