force-app/main/default/objects/Product2/listViews/Active_Auction_Items.listView-meta.xml
<ListView>
    <fullName>Active_Auction_Items</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>GL_Code__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Quote_Type__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
    <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
    <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Auction Items</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Auction Items</label>
</ListView>