force-app/main/default/objects/Product2/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Product_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>event manager</value>
    </filters>
    <label>Active Products</label>
</ListView>