force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>GL_Code__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Quote_Type__c</columns>
    <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
    <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
    <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>notContain</operation>
        <value>Recurring donation for</value>
    </filters>
    <label>All Products</label>
</ListView>